Bug 511631 - Inactive window gets activated when hovering over it
Summary: Inactive window gets activated when hovering over it
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: core (other bugs)
Version First Reported In: 6.5.1
Platform: Fedora RPMs Linux
: HI normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords: regression
: 511322 511957 512107 (view as bug list)
Depends on:
Blocks:
 
Reported: 2025-11-04 15:59 UTC by Przemysław Palacz
Modified: 2025-11-20 09:59 UTC (History)
8 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.5.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Przemysław Palacz 2025-11-04 15:59:48 UTC
SUMMARY
Platform: Wayland
Window activation policy: Click to focus
Raising windows: Click raises active window
Raise on hover: unchecked
Happens only on wayland windows, when hoovering over x11 (xwayland) works as expected/previously.

STEPS TO REPRODUCE
1. Open 2 windows
2. Hover over some element that raises native tooltip in the inactive window

OBSERVED RESULT
Inactive window is activated and focused.

EXPECTED RESULT
Inactive window should stay inactive - previous behavior.


SOFTWARE/OS VERSIONS
Linux: 6.17.6
KDE Plasma Version: 6.5.1
KDE Frameworks Version: 6.19.0
Qt Version: 6.10
Comment 1 Zamundaaa 2025-11-05 13:01:22 UTC
Can confirm. That's quite odd!
Comment 2 pallaswept 2025-11-06 09:08:30 UTC
Thanks for reporting this. I'm glad you figured out how to reproduce it!

My nerves are busted so I wasn't sure if it was 'clicking by itself' or I'd developed a twitch in my index finger and I couldn't feel it :D
Comment 3 Bug Janitor Service 2025-11-06 14:11:01 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/8376
Comment 4 Zamundaaa 2025-11-07 15:52:25 UTC
Git commit 50aa2e6009866afb3fdd1d9586aef4579d25ca1c by Xaver Hugl.
Committed on 07/11/2025 at 12:10.
Pushed by zamundaaa into branch 'master'.

workspace: don't activate or restack popup windows

Activating a popup window implicitly causes its parent to be activated as well,
which makes it get in the way of the previously active window.

Restacking them below the active window sounds sensible on the surface, but also
happens to raise both the popup and its parent above the active window, because
the popup is in a different layer than the active window.
I would like to change restackWindowUnderActive to be more intuitive, but it
looks a bit risky for a bugfix. It can be done later as a refactor.

M  +2    -2    src/workspace.cpp

https://invent.kde.org/plasma/kwin/-/commit/50aa2e6009866afb3fdd1d9586aef4579d25ca1c
Comment 5 Zamundaaa 2025-11-07 17:44:14 UTC
Git commit 2ba475ce6ad74b4ced5ce7577b78e830d2ffefe2 by Xaver Hugl.
Committed on 07/11/2025 at 16:34.
Pushed by zamundaaa into branch 'Plasma/6.5'.

workspace: don't activate or restack popup windows

Activating a popup window implicitly causes its parent to be activated as well,
which makes it get in the way of the previously active window.

Restacking them below the active window sounds sensible on the surface, but also
happens to raise both the popup and its parent above the active window, because
the popup is in a different layer than the active window.
I would like to change restackWindowUnderActive to be more intuitive, but it
looks a bit risky for a bugfix. It can be done later as a refactor.


(cherry picked from commit 50aa2e6009866afb3fdd1d9586aef4579d25ca1c)

Co-authored-by: Xaver Hugl <xaver.hugl@kde.org>

M  +2    -2    src/workspace.cpp

https://invent.kde.org/plasma/kwin/-/commit/2ba475ce6ad74b4ced5ce7577b78e830d2ffefe2
Comment 6 malformedneutron 2025-11-07 18:02:43 UTC
Is this bug related to https://bugs.kde.org/show_bug.cgi?id=511322 in Dolphin by chance? It seems to be the same thing.
Comment 7 Nate Graham 2025-11-08 00:15:47 UTC
*** Bug 511322 has been marked as a duplicate of this bug. ***
Comment 8 Zamundaaa 2025-11-11 14:30:24 UTC
*** Bug 511957 has been marked as a duplicate of this bug. ***
Comment 9 Zamundaaa 2025-11-17 16:12:44 UTC
*** Bug 512107 has been marked as a duplicate of this bug. ***